[tool.poetry]
name = "package"
version = "0.1.0"
description = "OpenSearch langchain hello."
authors = ["Daniel Doubrovkine <dblock@dblock.org>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "0.0.336"
opensearch-py = "2.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
